# aiohomeconnect

./: .all-contributorsrc  .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml  renovate.json  setup.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  labels.toml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  lint-pr.yml  poetry-upgrade.yml
docs/: conf.py  index.md  installation.md  usage.md
scripts/: swagger_model.py
src/aiohomeconnect/: __init__.py  client.py  const.py  model.py  sse_client.py
src/aiohomeconnect/cli/: __init__.py  client.py
src/aiohomeconnect/model/: __init__.py  appliance.py  error.py  event.py  image.py  program.py  setting.py  status.py
templates/: CHANGELOG.md.j2
tests/: __init__.py  conftest.py  test_client.py  test_dunder_main.py  test_main.py  test_model.py
